@@ -1,0 +1,4 @@
+[veemg]
+extras = ChangeLog Makefile README.txt ToDo
+regexps = .*\.py$
+exclusions = __pycache__
