@@ -1,7 +1,9 @@
-This directory contains the Simple Python Fixed-Point Module
+This directory contains the Simple Python Fixed-Point Module,
+a set of pure-Python utilities for performing binary fixed-point arithmetic,
+including trigonometric and exponential functions.
 
 Please note that from release 1.0 onwards,
-this package requires python-3.0 or later.
+this package requires python-3.1 or later.
 
 All files are released under the Python PSF License
 (see http://www.python.org/psf/license)
