@@ -1,3 +1,1 @@
-Implement lshift/rshift
 Improve treatment of rounding-errors on truncated Taylor-series
-
