@@ -1,5 +1,10 @@
 ChangeLog for Simple Python Fixed-Point Module
 
+15Jul14	- *** spfpm-1.1 released
+
+15Jul14	- added left/right shift operators
+	improved initialization of FXnum objects from output of repr()
+
 14Jul14	- replaced various getter methods in FXfamily with properties
 	added improved expressions for computing exp(1) and log(2)
 	updated graph-based demos to use Matplotlib in place of Gnuplot
